fix: checkIsValidWeatherName